fix(jump-in): renamed "sudden" to "jump-in"

--- a/css/jump-in.css
+++ b/css/jump-in.css
@@ -1,4 +1,4 @@
-.hoverboard.sudden-left {
+.hoverboard.jump-in-left {
     figcaption {
         transform: translate(100%, 0) rotate(-90deg);
         transition: all .5s ease, transform .5s cubic-bezier(0.5, 0, 0.4, 1.3);
@@ -13,7 +13,7 @@
     }
 }
 
-.hoverboard.sudden-right {
+.hoverboard.jump-in-right {
     figcaption {
         transform: translate(-100%, 0) rotate(90deg);
         transition: all .5s ease, transform .5s cubic-bezier(0.5, 0, 0.4, 1.3);
